@@ -1160,6 +1160,16 @@ namespace libtorrent
 	{
 		TORRENT_ASYNC_CALL(start_upnp);
 	}
+
+	int session::add_port_mapping(protocol_type t, int external_port, int local_port)
+	{
+		TORRENT_SYNC_CALL_RET3(add_port_forward, int, t, external_port, local_port);
+	}
+
+	void session::delete_port_mapping(int handle)
+	{
+		TORRENT_ASYNC_CALL1(delete_port_forward, handle);
+	}
 	
 	void session::stop_lsd()
 	{
